# audacious-qfiletransport

./: CMakeLists.txt  LICENSE.txt  README.md  build_msys2.sh  qfiletransport.cpp
